--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -213,6 +213,14 @@
                         </div>
                     </div>
                 </li>
+                <li style="width: 318px;padding-left: 2px">
+                    <div class="displayBox">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/kiyomi_36.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="35">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/kiyomi_37.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="36">
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <ol class="icon_navi" style="position:relative;margin-bottom: -1px;margin-top: -7px;">
@@ -223,6 +231,7 @@
             <li><a>5</a></li>
             <li><a>6</a></li>
             <li><a>7</a></li>
+            <li><a>8</a></li>
         </ol>
         <div id="tab-content" style="position:relative;z-index:1">
         </div>
@@ -3589,6 +3598,165 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[초☆뜻관철]사에지마 키요미",
+                        "rarity": "5",
+                        "cost": "26",
+                        "attribute": "passion",
+                        "skill_name": "맑게☆바르게☆아름답게",
+                        "skill_effect": "패션 프론트 멤버 및 백멤버 상위 5인의 공 궁극 업",
+                        "grow_idol_flag": "",
+                        "default_attack": "8440",
+                        "default_defense": "6540",
+                        "hash_card_id": "1ddf4597ef3f8115948d32bfa920b691",
+                        "alias_name": "초☆뜻관철",
+                        "real_name": "사에지마키요미"
+                    },
+                    "profile": {
+                        "card_id": "3466901",
+                        "card_name": "[超☆志貫徹]冴島清美",
+                        "card_kana": "사에지마 키요미",
+                        "card_age": "15",
+                        "card_from": "오키나와",
+                        "card_height": "153",
+                        "card_weight": "43",
+                        "card_bust": "76",
+                        "card_waist": "58",
+                        "card_hip": "78",
+                        "card_birthday": "9월 26일",
+                        "card_constellation": "천칭자리",
+                        "card_blood": "A",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "청소, 정리정돈, 완장 만들기",
+                        "card_cv": null
+                    },
+                    "comments": {
+                        "comment": "네, OK… 기다리셨습니다, 프로듀서. 마중나와주셔서 감사합니다! 학생분들의 풍기 체크도 끝났고, 오늘도 기분 좋게 일할 수 있을 것 같습니다. 자, 기운차게 가죠!",
+                        "comments_my_1": "몸이 바짝 죄이는 기분입니다!",
+                        "comments_my_2": "언제라도, 앞을 향해서 당당하게.",
+                        "comments_my_3": "안경이 번쩍이는 건 원래 그런 거니까요.",
+                        "comments_my_4": "프로듀서, 오늘의 어깨띠는 어떤 걸로 하시겠어요? 신작도 있어요!",
+                        "comments_my_max": "아침부터 프로듀서와 만나면, 오늘 하루 분발하자고 생각됩니다♪",
+                        "comments_work_1": "기합을 넣을게요! 갈~!",
+                        "comments_work_2": "어떤 때라도, 청결함을 소중하게.",
+                        "comments_work_3": "사소한 위반도 눈감아주지 않아요!",
+                        "comments_work_4": "준비 OK! 복장을 정돈하고, 상쾌한 기분으로 일을 시작하죠!",
+                        "comments_work_max": "프로듀서용 완장은 여기에… 제가 달아드릴게요!",
+                        "comments_work_love_up": "저와 프로듀서의 눈빛과 지도가, 오늘의 풍기를 만듭니다!",
+                        "comments_live": "우선은 인사, 기본이에요!",
+                        "comments_love_max": "OO프로듀서, 불시 체크입니다! 소중한 사람이니까, 언제라도 딱부러지게 있길 바라요… 풍기의 문란은, 마음의 문란이니까요!"
+                    },
+                    "voice": {
+                        "comment": "",
+                        "comments_my_1": "",
+                        "comments_my_2": "",
+                        "comments_my_3": "",
+                        "comments_my_4": "",
+                        "comments_my_max": "",
+                        "comments_work_1": "",
+                        "comments_work_2": "",
+                        "comments_work_3": "",
+                        "comments_work_4": "",
+                        "comments_work_max": "",
+                        "comments_work_love_up": "",
+                        "comments_live": "",
+                        "comments_love_max": ""
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "196",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/196_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[초☆뜻관철]사에지마 키요미+",
+                        "rarity": "6",
+                        "cost": "26",
+                        "attribute": "passion",
+                        "skill_name": "맑게☆바르게☆아름답게",
+                        "skill_effect": "패션 프론트 멤버 및 백멤버 상위 5인의 공 궁극 업",
+                        "grow_idol_flag": "",
+                        "default_attack": "10128",
+                        "default_defense": "7848",
+                        "skill_effect_2": "쿨 프론트 멤버 및 백멤버 상위 3인의 공 초절 업",
+                        "hash_card_id": "08829a492b897bba478bcc3188b15ac4",
+                        "alias_name": "초☆뜻관철",
+                        "real_name": "사에지마키요미+"
+                    },
+                    "profile": {
+                        "card_id": "3566902",
+                        "card_name": "[超☆志貫徹]冴島清美+",
+                        "card_kana": "사에지마 키요미",
+                        "card_age": "15",
+                        "card_from": "오키나와",
+                        "card_height": "153",
+                        "card_weight": "43",
+                        "card_bust": "76",
+                        "card_waist": "58",
+                        "card_hip": "78",
+                        "card_birthday": "9월 26일",
+                        "card_constellation": "천칭자리",
+                        "card_blood": "A",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "청소, 정리정돈, 완장 만들기",
+                        "card_cv": null
+                    },
+                    "comments": {
+                        "comment": "상쾌한 맑은 하늘이 됐습니다! 이건 분명, 규칙적으로 지내는 여러분에 대한 포상입니다♪ 그럼, 슬로건 콜도, 빈틈없이 보조를 맞춰서 부탁드릴게요! 갈게요! 하나~둘, 근엄실직!",
+                        "comments_my_1": "몸이 바짝 죄이는 기분입니다!",
+                        "comments_my_2": "언제라도, 앞을 향해서 당당하게.",
+                        "comments_my_3": "미소도, 풍기활동에 필요합니다!",
+                        "comments_my_4": "의상담당 분이, 오늘을 위해서 특별한 완장을 만들어 주셨습니다♪",
+                        "comments_my_max": "스테이지에서도, OO 프로듀서의 체크는 게을리하지 않습니다♪",
+                        "comments_work_1": "기합을 넣을게요! 갈~!",
+                        "comments_work_2": "어떤 때라도, 청결함을 소중하게.",
+                        "comments_work_3": "시선도 빈틈없이에요! 후훗♪",
+                        "comments_work_4": "후훗, 네! 여러분으로부터의 리스폰스, 확실하게 받았습니다♪",
+                        "comments_work_max": "초☆토크도 숙달되어 있습니다! 한눈팔기는 나중에 패널티예요, 프로듀서!",
+                        "comments_work_love_up": "보내드릴게요! 이 푸른 하늘처럼 여문 미소를, 프로듀서에게…!",
+                        "comments_live": "여러분, 다함께! 오~!",
+                        "comments_love_max": "어떤 일이라도, 할 거라면 전력입니다. 완전판 초☆풍기 아이돌이 될 때까지, 품행방정으로 계속 달릴게요, OO프로듀서!"
+                    },
+                    "voice": {
+                        "comment": "",
+                        "comments_my_1": "",
+                        "comments_my_2": "",
+                        "comments_my_3": "",
+                        "comments_my_4": "",
+                        "comments_my_max": "",
+                        "comments_work_1": "",
+                        "comments_work_2": "",
+                        "comments_work_3": "",
+                        "comments_work_4": "",
+                        "comments_work_max": "",
+                        "comments_work_love_up": "",
+                        "comments_live": "",
+                        "comments_love_max": ""
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "196",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/196_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
                     "story_id": "163",
@@ -3670,7 +3838,9 @@ kg
                           "../../image_sp/card/l/kiyomi_32.jpg",
                           "../../image_sp/card_sign_b/l/kiyomi_33.jpg",
                           "../../image_sp/card_sign_b/l/kiyomi_34.jpg",
-                          "../../image_sp/card/l/kiyomi_35.jpg"],
+                          "../../image_sp/card/l/kiyomi_35.jpg",
+                          "../../image_sp/card_sign_b/l/kiyomi_36.jpg",
+                          "../../image_sp/card_sign_b/l/kiyomi_37.jpg"],
                     "l_premium": {
                         "8": "../../image_sp/card_sign_p/l/kiyomi_09.jpg",
                         "9": "../../image_sp/card_sign_p/l/kiyomi_10.jpg",
@@ -3689,7 +3859,9 @@ kg
                         "27": "../../image_sp/card_sign_p/l/kiyomi_28.jpg",
                         "28": "../../image_sp/card_sign_p/l/kiyomi_29.jpg",
                         "32": "../../image_sp/card_sign_p/l/kiyomi_33.jpg",
-                        "33": "../../image_sp/card_sign_p/l/kiyomi_34.jpg"
+                        "33": "../../image_sp/card_sign_p/l/kiyomi_34.jpg",
+                        "35": "../../image_sp/card_sign_p/l/kiyomi_36.jpg",
+                        "36": "../../image_sp/card_sign_p/l/kiyomi_37.jpg"
                     },
                     "l_nosign": ["",
                                  "",
@@ -3725,7 +3897,9 @@ kg
                                  "",
                                  "../../image_sp/card/l/kiyomi_33.jpg",
                                  "../../image_sp/card/l/kiyomi_34.jpg",
-                                 ""],
+                                 "",
+                                 "../../image_sp/card/l/kiyomi_36.jpg",
+                                 "../../image_sp/card/l/kiyomi_37.jpg"],
                     "l_nosign_p": {
                         "8": "../../image_sp/card_sign_no_p/l/kiyomi_09.jpg",
                         "9": "../../image_sp/card_sign_no_p/l/kiyomi_10.jpg",
@@ -3744,7 +3918,9 @@ kg
                         "27": "../../image_sp/card_sign_no_p/l/kiyomi_28.jpg",
                         "28": "../../image_sp/card_sign_no_p/l/kiyomi_29.jpg",
                         "32": "../../image_sp/card_sign_no_p/l/kiyomi_33.jpg",
-                        "33": "../../image_sp/card_sign_no_p/l/kiyomi_34.jpg"
+                        "33": "../../image_sp/card_sign_no_p/l/kiyomi_34.jpg",
+                        "35": "../../image_sp/card_sign_no_p/l/kiyomi_36.jpg",
+                        "36": "../../image_sp/card_sign_no_p/l/kiyomi_37.jpg"
                     },
                     "l_noframe": [null, 
                                   null, 
@@ -3780,7 +3956,9 @@ kg
                                   null, 
                                   "../../image_sp/card/l_noframe/kiyomi_33.jpg", 
                                   "../../image_sp/card/l_noframe/kiyomi_34.jpg", 
-                                  null],
+                                  null,
+                                  "../../image_sp/card/l_noframe/kiyomi_36.jpg", 
+                                  "../../image_sp/card/l_noframe/kiyomi_37.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l_p": [],
@@ -3819,7 +3997,9 @@ kg
                            "../../image_sp/card/xs/kiyomi_32.jpg",
                            "../../image_sp/card/xs/kiyomi_33.jpg",
                            "../../image_sp/card/xs/kiyomi_34.jpg",
-                           "../../image_sp/card/xs/kiyomi_35.jpg"],
+                           "../../image_sp/card/xs/kiyomi_35.jpg",
+                           "../../image_sp/card/xs/kiyomi_36.jpg",
+                           "../../image_sp/card/xs/kiyomi_37.jpg"],
                     "m2": ["../../image_sp/card/m2/kiyomi_01.jpg",
                            "../../image_sp/card/m2/kiyomi_02.jpg",
                            "../../image_sp/card/m2/kiyomi_03.jpg",
@@ -3854,7 +4034,9 @@ kg
                            "../../image_sp/card/m2/kiyomi_28.jpg",
                            "../../image_sp/card/m2/kiyomi_29.jpg",
                            "../../image_sp/card/m2/kiyomi_33.jpg",
-                           "../../image_sp/card/m2/kiyomi_34.jpg"],
+                           "../../image_sp/card/m2/kiyomi_34.jpg",
+                           "../../image_sp/card/m2/kiyomi_36.jpg"
+                           "../../image_sp/card/m2/kiyomi_37.jpg"],
                     "quest": ["../../image_sp/card/quest/kiyomi_01.png",
                               "../../image_sp/card/quest/kiyomi_02.png",
                               "../../image_sp/card/quest/kiyomi_03.png",
@@ -3889,7 +4071,9 @@ kg
                               "../../image_sp/card/quest/kiyomi_32.png",
                               "../../image_sp/card/quest/kiyomi_33.jpg",
                               "../../image_sp/card/quest/kiyomi_34.jpg",
-                              "../../image_sp/card/quest/kiyomi_35.png",]
+                              "../../image_sp/card/quest/kiyomi_35.png",
+                              "../../image_sp/card/quest/kiyomi_36.jpg",
+                              "../../image_sp/card/quest/kiyomi_37.jpg"]
                 };
                 idol.ios_app_flg = false;
                 idol.apple_review = null;
