--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -4035,7 +4035,7 @@ kg
                            "../../image_sp/card/m2/kiyomi_29.jpg",
                            "../../image_sp/card/m2/kiyomi_33.jpg",
                            "../../image_sp/card/m2/kiyomi_34.jpg",
-                           "../../image_sp/card/m2/kiyomi_36.jpg"
+                           "../../image_sp/card/m2/kiyomi_36.jpg",
                            "../../image_sp/card/m2/kiyomi_37.jpg"],
                     "quest": ["../../image_sp/card/quest/kiyomi_01.png",
                               "../../image_sp/card/quest/kiyomi_02.png",
