--- a/item/show_premium_card_cjs/90/fumi_main.html
+++ b/item/show_premium_card_cjs/90/fumi_main.html
@@ -424,6 +424,46 @@
                                     </a>
                                 </li>
                             </ul>
+                            <ul class="displayBox t-Cnt">
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_35.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_35.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_36.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_36.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="displayBox t-Cnt">
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_37.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_37.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                                <li style="width:50%;">
+                                    <form method="get" action="fumika_38.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/fumika_38.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         <div class="area-frame_bg_image"></div>
                     </div>
