--- a/item/show_premium_card_cjs/90/kiyomi_main.html
+++ b/item/show_premium_card_cjs/90/kiyomi_main.html
@@ -335,6 +335,26 @@
                                     </a>
                                 </li>
                             </ul>
+                            <ul class="displayBox t-Cnt">
+                                <li style="width:50%;">
+                                    <form method="get" action="kiyomi_36.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/kiyomi_36.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                                <li style="width:50%;">
+                                    <form method="get" action="kiyomi_37.html" style="height:90px;">
+                                        <input type="image" src="../../../image_sp/card/xs/kiyomi_37.jpg" height="75" class="jsOnDesignBtn"><br>
+                                        <br>
+                                        <input type="hidden" name="voice" value="0">
+                                    </form>
+                                    <a href="" class="jsOnDesignBtn">
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         <div class="area-frame_bg_image"></div>
                     </div>
