--- a/idol_story/movie_play/397/1.html
+++ b/idol_story/movie_play/397/1.html
@@ -195,7 +195,7 @@
                 event.preventDefault();
             }
             ;function redirect() {
-                location.href = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error";
+                location.href = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error%3Fl_frm%3DSmart_phone_flash_convert_1%26rnd%3D122300194";
             }
             ;function isFlash() {
                 var container = document.getElementById("container");
