--- a/idol_story/movie_play/397/1_k.html
+++ b/idol_story/movie_play/397/1_k.html
@@ -15,7 +15,7 @@
         <script>
             $(document).ready(function() {
                 if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                    newrelic.setPageViewName('/uhlmkashim/anniversary/idol_story/movie_play/397/1');
+                    newrelic.setPageViewName('/uhlmkashim/anniversary/idol_story/movie_play/397/1_k');
                 }
             });
         </script>
@@ -128,7 +128,7 @@
                     httpObj.send(null);
                 }
                 if (flashPlayerVersion != "" && aa != "2" && pexFlag != 1 && native_app_flg != "1" && chrome_app_flg != "1" && andapp_flg != "1") {
-                    var retUrl = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/flash/397/1";
+                    var retUrl = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/flash/397/1_k";
                     location.href = retUrl;
                     return;
                 }
@@ -195,7 +195,7 @@
                 event.preventDefault();
             }
             ;function redirect() {
-                location.href = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error";
+                location.href = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error%3Fl_frm%3DSmart_phone_flash_convert_1%26rnd%3D122300194";
             }
             ;function isFlash() {
                 var container = document.getElementById("container");
