--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -783,20 +783,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ｸｸｸ､私の才能を見抜くとは､ｱﾅﾀも｢瞳｣の持ち主のようね……｡私の力に身を焼かれぬよう､せいぜい気をつけなさい｡ﾌﾌ､ﾌﾌﾌﾌﾌ(訳:ﾌﾟﾛﾃﾞｭｰｽしてくれてありがとう､頑張ります!! )",
-                        "comments_my_1": "煩わしい太陽ね(おはよう! )",
-                        "comments_my_2": "何かしら? (ご用ですか? )",
-                        "comments_my_3": "ｸｸｸ､魂が猛るわ(頑張ります♪)",
-                        "comments_my_4": "我が下僕OOよ､ついて参れ(仕事に行きましょう!! )",
-                        "comments_my_max": "OOﾌﾟﾛ…ﾃﾞｭｰｻｰ…｡今日も､その､よろしく…",
-                        "comments_work_1": "生命の雫が!! (汗かいちゃった)",
-                        "comments_work_2": "闇に飲まれよ! (お疲れ様です! )",
-                        "comments_work_3": "我が魂の赴くままに(次いこｰ)",
-                        "comments_work_4": "我が下僕OOよ､黄泉の泉へ誘え! (後でお茶しない? )",
-                        "comments_work_max": "あ､ありがとう｡OOﾌﾟﾛ…ﾃﾞｭｰｻｰ…",
-                        "comments_work_love_up": "OOﾌﾟ…ﾌﾟﾛ…ﾌﾟﾛｳﾞｧﾝｽの風(素直になれない…orz)",
-                        "comments_live": "悪魔の歌声に跪きなさい! ",
-                        "comments_love_max": "OOﾌﾟﾛ…ﾃﾞｭｰｻｰ｡あの…わ､私､絶対あなたの期待に応えてみせるから…!! そ､それだけ言いたかったの"
+                        "comment": "크크크, 나의 재능을 간파했다는 것은, 당신도 ｢눈동자｣의 소유자인 것 같군…… 나의 힘에 몸이 타버리지 않도록, 가능한 한 조심하라. 후후, 후후후후후 (역 : 프로듀스해줘서 고마워요, 열심히 할게요!!)",
+                        "comments_my_1": "성가신 태양이네 (안녕!)",
+                        "comments_my_2": "무슨 일이지? (용무가 있으신가요?)",
+                        "comments_my_3": "크크크, 영혼이 날뛴다 (열심히 할게요♪)",
+                        "comments_my_4": "나의 하인 OO여, 따라 와라 (일하러 가요!!)",
+                        "comments_my_max": "OO프로듀서… 오늘도, 저기, 잘 부탁해…",
+                        "comments_work_1": "생명의 물방울이!! (땀나 버렸다)",
+                        "comments_work_2": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_3": "나의 혼이 향하는대로(다음 가자-)",
+                        "comments_work_4": "나의 하인 OO여, 황천의 샘으로 이끌려라! (나중에 차 마시지 않을래요?)",
+                        "comments_work_max": "고, 고마워. OO프로…듀서…",
+                        "comments_work_love_up": "OO프…프로…프로방스의 바람(솔직해질 수가 없네…orz)",
+                        "comments_live": "악마의 노랫소리에 무릎 꿇으라!",
+                        "comments_love_max": "OO프로…듀서. 저기… 나, 나, 절대 당신의 기대에 부응할테니까…!! 그, 그것만큼은 말하고 싶었어"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2200601/idolcomment.mp3",
@@ -860,20 +860,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ｸｸｸ､これが私の第2形態…この姿を見てしまったからには､無事では済まないわ…｡さぁ狂乱の宴の始まりよ!! (訳:素敵な衣装､ありがとう! とっても嬉しいですっ♪)",
-                        "comments_my_1": "煩わしい太陽ね(おはよう! )",
-                        "comments_my_2": "何かしら? (ご用ですか? )",
-                        "comments_my_3": "天空の光よ!! (毎日楽しい! )",
-                        "comments_my_4": "我が友OO｡今こそ旅立ちの時よ! (一緒に仕事いこ? )",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ｡仕事に行きたくなる呪いをかけたわ",
-                        "comments_work_1": "生命の雫が!! (汗かいちゃった)",
-                        "comments_work_2": "闇に飲まれよ! (お疲れ様です! )",
-                        "comments_work_3": "いざ約束の地へ! (仕事仕事～)",
-                        "comments_work_4": "我が友OOよ｡其方の願いを叶えよう(私､頑張る! )",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ｡Liveがしたくなる呪いをかけたわ",
-                        "comments_work_love_up": "お疲れ様OOﾌﾟﾛﾃﾞｭｰｻｰ｡(はぁ～緊張したぁ…!! )",
-                        "comments_live": "ｸｸｸ､さぁ伝説の始まりよ",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ｡私のことずっと見守っていてくれて､ありがとう｡……私､必ずﾄｯﾌﾟｱｲﾄﾞﾙになるから…! "
+                        "comment": "크크크, 이것이 나의 제2형태…이 모습을 봐 버린 이상 무사히는 끝나지 않아… 자아 광란의 연회의 시작이야!! (역 : 멋진 의상, 고마워요! 굉장히 기뻐요♪)",
+                        "comments_my_1": "성가신 태양이네 (안녕!)",
+                        "comments_my_2": "무슨 일이지? (용무가 있으신가요?)",
+                        "comments_my_3": "천공의 빛이여!! (매일 즐거워!)",
+                        "comments_my_4": "나의 벗 OO. 지금이야말로 떠날 때! (같이 일하러 가자?)",
+                        "comments_my_max": "OO프로듀서, 일하고 싶게 되는 저주를 걸었다",
+                        "comments_work_1": "생명의 물방울이!! (땀나 버렸다)",
+                        "comments_work_2": "어둠에 삼켜져라! (수고하셨습니다!)",
+                        "comments_work_3": "자 약속의 땅으로! (일하자 일~)",
+                        "comments_work_4": "나의 벗 OO여. 그대의 소원을 이루자(나, 노력할게!)",
+                        "comments_work_max": "OO프로듀서, Live가 하고 싶어지는 저주를 걸었다",
+                        "comments_work_love_up": "수고했어 OO프로듀서. (하아～긴장했다…!!)",
+                        "comments_live": "크크크, 자아 전설의 시작이야",
+                        "comments_love_max": "OO프로듀서.  나를 쭉 지켜봐줘서, 고마워…… 나, 꼭 TOP 아이돌이 될테니까…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2300602/idolcomment.mp3",
