--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4359,7 +4359,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "1",
-                    "story_title": "シンデレラガール神崎蘭子",
+                    "story_title": "신데렐라 걸 칸자키 란코",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/001/1_k.html", 
                                    "../../idol_story/movie_play/001/2_k.html"],
@@ -4926,24 +4926,24 @@ kg
                 }
             };
             var type_names = {
-                "idol": "アイドルコメント",
-                "my": "マイスタジオ",
-                "my_max": "マイスタジオ(親愛度MAX)",
-                "work": "お仕事",
-                "work_love_up": "お仕事(親愛度UP)",
-                "work_max": "お仕事(親愛度MAX)",
-                "live": "LIVEバトル",
-                "love_max": "親愛度MAX演出"
+                "idol": "아이돌코멘트",
+                "my": "마이스튜디오",
+                "my_max": "마이스튜디오(친애도MAX)",
+                "work": "영업",
+                "work_love_up": "영업(친애도UP)",
+                "work_max": "영업(친애도MAX)",
+                "live": "LIVE배틀",
+                "love_max": "친애도MAX연출"
             };
             var category_names = {
-                "greeting": "あいさつ",
-                "work": "お仕事",
-                "love_max": "親愛度MAX"
+                "greeting": "인사",
+                "work": "영업",
+                "love_max": "친애도MAX"
             };
             var conditions_names = {
-                "none": "条件無し",
-                "get_idol": "アイドルが所属すると閲覧できます",
-                "love_max": "親愛度をMAXにすると閲覧できます"
+                "none": "조건없음",
+                "get_idol": "아이돌이 소속되면 볼 수 있습니다.",
+                "love_max": "친애도를 MAX로 하면 볼 수 있습니다."
             };
             var comment_tab_start = null;
             var show_premium = true;
@@ -4999,9 +4999,9 @@ kg
         <div class="m-Top8 m-Btm8">
             <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
-        <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
+        <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">극장에서 검색</a>
         <a href='../../mypage.html'>
-            <div class="backLink">アイドルギャラリーTOP</div>
+            <div class="backLink">마이 페이지로</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
